--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,12 @@ dependencies:
 
 dev_dependencies:
   build_runner: ^2.4.7
+  flutter_launcher_icons: "^0.14.0"
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/app_logo.png"
 
   flutter_lints: ^4.0.0
   flutter_test:
