--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,3 +68,8 @@ flutter:
           weight: 400
         - asset: assets/fonts/Roboto-Light.ttf
           weight: 300
+    
+    - family: LibreBaskerville
+      fonts:
+        - asset: assets/fonts/LibreBaskerville-Regular.ttf
+          weight: 400
