--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   flutter_native_splash: ^2.3.5
   flutter_screenutil: ^5.9.0
   flutter_secure_storage: ^9.2.2
+  flutter_spinkit: ^5.2.1
   flutter_svg: ^2.0.9
   freezed: ^2.4.5
   freezed_annotation: ^2.4.1
@@ -68,7 +69,7 @@ flutter:
           weight: 400
         - asset: assets/fonts/Roboto-Light.ttf
           weight: 300
-    
+
     - family: LibreBaskerville
       fonts:
         - asset: assets/fonts/LibreBaskerville-Regular.ttf
