--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 
 dependencies:
   cached_network_image: ^3.3.1
+  carousel_slider: ^5.0.0
   connectivity_plus: ^6.0.5
   cupertino_icons: ^1.0.8
   dio: ^5.3.3
