--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   flutter_secure_storage: ^9.2.2
   flutter_spinkit: ^5.2.1
   flutter_svg: ^2.0.9
+  font_awesome_flutter: ^10.7.0
   freezed: ^2.4.5
   freezed_annotation: ^2.4.1
   get_it: ^7.6.4
