--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   shared_preferences: ^2.2.3
   skeletonizer: ^1.4.2
   bottom_navy_bar: ^6.1.0
+  google_sign_in: ^6.2.1
+  flutter_facebook_auth: ^7.1.1
 
 dev_dependencies:
   build_runner: ^2.4.7
