--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   bottom_navy_bar: ^6.1.0
   google_sign_in: ^6.2.1
   flutter_facebook_auth: ^7.1.1
+  shimmer: ^3.0.0
 
 dev_dependencies:
   build_runner: ^2.4.7
