--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.3
-  flutter_native_splash: ^2.3.5
+  flutter_native_splash: ^2.4.0
   flutter_screenutil: ^5.9.0
   flutter_secure_storage: ^9.2.2
   flutter_spinkit: ^5.2.1
@@ -66,6 +66,7 @@ flutter:
   assets:
     - assets/icons/
     - assets/images/
+    - assets/images/core/
     - assets/fonts/
     - assets/translations/
   fonts:
