--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,9 +53,14 @@ dev_dependencies:
 
 
 flutter_launcher_icons:
-  android: "launcher_icon"
-  ios: true
+  # android: "launcher_icon"
   image_path: "assets/images/app_logo.png"
+  adaptive_icon_foreground: "assets/images/app_logo.png"
+  adaptive_icon_background: "#feeaf6"
+  android: true
+  ios: true
+  min_sdk_android: 23 # android min sdk min:16, default 21
+
 
   flutter_lints: ^4.0.0
   flutter_test:
